update：1.优化了im-spring的功能，增加了新的注解 2.增加了im-core消息类型 3.增加了im-database群组邀请crud 4.优化了im-server 好友 及 群组 的部分逻辑